; name = name of the supermodule that will wrap all source files as submodules
; public_name = name of the library for ocamlfind and opam

(library
 (name fpinocaml_chapter10)
 (public_name fpinocaml.chapter10)
 (libraries unix core fpinocaml.chapter7 fpinocaml.chapter8)
 (synopsis "Chapter 10 is for basic people"))
