; name = name of the supermodule that will wrap all source files as submodules
; public_name = name of the library for ocamlfind and opam

(library
 (name fpinocaml_chapter8)
 (public_name fpinocaml.chapter8)
 (libraries unix core fpinocaml.chapter6 fpinocaml.chapter5)
 (synopsis "Chapter 8 is for basic people"))
